--- a/test/specs/global/global.css
+++ b/test/specs/global/global.css
@@ -87,7 +87,7 @@ div {
   -dls-background-color-normal: #fff;
   -dls-background-color-normal-hover: #f5f5f5;
   -dls-background-color-normal-active: #eee;
-  -dls-background-color-disabled: #ccc;
+  -dls-background-color-disabled: #fafafa;
   -dls-border-color-strong: #e0e0e0;
   -dls-border-color-normal: #eee;
   -dls-separator-color-strong: #e0e0e0;
